examples/test/testpolicy12063.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12063
  namespace: namespace308
spec:
  podSelector:
    matchLabels:
      key0: value39
      key36: value16
      key43: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value46
          key26: value49
      podSelector:
        matchLabels:
          key3: value14
